Fix dev/prod URL generation

--- a/env.sample
+++ b/env.sample
@@ -1,7 +1,10 @@
-# The domain/hostname:port where the Hugo site is available
-SITE_DOMAN=<SITE_DOMAN>
+# The domain name wher ethe site is available in production
+SITE_DOMAIN=<SITE_DOMAIN>
 
-# The domain/hostname:port where the PAI server is available
+# The host where the Hugo site is available
+SITE_HOST=<SITE_HOST>
+
+# The domain/hostname:port where the API server is available
 API_HOST=<API_HOST>
 
 # The Postgres URL, e.g. postgresql://postgres:postgres@localhost:5432/garbage_speak?sslomode=disable
