Rename FROM_ADDRESS env var

--- a/env.sample
+++ b/env.sample
@@ -20,4 +20,4 @@ SMTP_USERNAME=<SMTP_USERNAME>
 SMTP_PASSWORD=<SMTP_PASSWORD>
 
 # The email address from which emails are sent
-SMTP_FROM_ADDRESS=<SMTP_FROM_ADDRESS>
+SMTP_SENDER=<SMTP_SENDER>
