--- a/hugo.toml
+++ b/hugo.toml
@@ -7,7 +7,7 @@ enableInlineShortcodes = true
 
 [params]
   languageName = "English"
-  subtitle = "The personal website of Adriano Caloiaro, covering technology, programming, technical howtos, life as a digital nomad, and more"
+  subtitle = "Garbage speak is a community of thought leaders who speak like your boss' boss"
   owner = ""
   keywords = "garbage speak, corporate speak, corporate langauge, corporate jargon"
   copyright = "Garbage Speak"
